--- a/apps/next-auth/package.json
+++ b/apps/next-auth/package.json
@@ -30,7 +30,11 @@
     "@boxyhq/tsconfig": "*",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18"
   },
   "prettier": {
     "semi": false
