added log viewer example

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build:next-auth": "turbo run build --filter='next-auth'",
     "dev:next-auth": "turbo run dev --filter='next-auth'",
     "start:next-auth": "turbo run start --filter='next-auth'",
+    "build:log-viewer": "turbo run build --filter='log-viewer'",
+    "backend:log-viewer": "turbo run backend --filter='log-viewer'",
+    "start:log-viewer": "turbo run start --filter='log-viewer'",
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
