--- a/apps/log-viewer/package.json
+++ b/apps/log-viewer/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "retraced-logs-viewer": "^2.2.7",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5",
-    "chance": "^1.1.8",
-    "retraced": "^0.4.2"
+    "@retraced-hq/logs-viewer": "2.3.0",
+    "web-vitals": "2.1.4",
+    "cors": "2.8.5",
+    "chance": "1.1.8",
+    "@retraced-hq/retraced": "0.4.6"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
