--- a/apps/log-viewer/package.json
+++ b/apps/log-viewer/package.json
@@ -9,11 +9,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "@retraced-hq/logs-viewer": "2.3.0",
+    "@retracedhq/logs-viewer": "2.4.2",
     "web-vitals": "2.1.4",
     "cors": "2.8.5",
     "chance": "1.1.8",
-    "@retraced-hq/retraced": "0.4.6"
+    "@retracedhq/retraced": "0.5.1"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
