--- a/apps/next-auth/.env
+++ b/apps/next-auth/.env
@@ -3,3 +3,6 @@ NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secre
 
 BOXYHQ_SAML_JACKSON_URL=https://jackson-demo.boxyhq.com
 BOXYHQ_PRODUCT=saml-demo.boxyhq.com
+
+NEXT_PUBLIC_GROUP_ID=retraced-demo
+RETRACED_BASE_URL=http://localhost:3000/auditlog
