--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
     "prettier": "2.6.0",
@@ -47,6 +48,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "uuid": "^9.0.0"
   }
 }
