--- a/apps/next-auth/.env
+++ b/apps/next-auth/.env
@@ -5,4 +5,4 @@ BOXYHQ_SAML_JACKSON_URL=https://jackson-demo.boxyhq.com
 BOXYHQ_PRODUCT=saml-demo.boxyhq.com
 
 NEXT_PUBLIC_GROUP_ID=retraced-demo
-RETRACED_BASE_URL=http://localhost:3000/auditlog
+NEXT_PUBLIC_RETRACED_BASE_URL=http://localhost:3000/auditlog
