--- a/apps/next-auth/.env
+++ b/apps/next-auth/.env
@@ -1,7 +1,7 @@
 NEXTAUTH_URL=http://localhost:3366
 NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 
-BOXYHQ_SAML_JACKSON_URL=https://sso.edu.boxyhq.com
+BOXYHQ_SAML_JACKSON_URL=https://sso.eu.boxyhq.com
 BOXYHQ_PRODUCT=1eef7782-41d4-4a0a-b450-0857413b4f63
 
 NEXT_PUBLIC_GROUP_ID=retraced-demo
